GNOME Bugzilla – Bug 731684
SVG generated by Google Drive is not shown well
Last modified: 2018-09-17 21:05:39 UTC
Open the attached svg with dia. Such svg was generated with google drive
Created attachment 278479 [details] svg simple file created with google drive
Created attachment 278480 [details] The svg itself
Interesting file, thanks. It even looked worse with the largely overhauled svg-import in the development version. There it was all black. Now fixed: https://git.gnome.org/browse/dia/commit/?id=7948495d11aaaa364e456a12380df6a9e99498ac
This issue is still not fixed on Dia for Windows.