Bug 731684 - Parse style from root node, too.

All the style attributes can be available with the svg element already.
Apparently no commonly used so not noticed with all the test files up
until now. According to https://bugzilla.gnome.org/show_bug.cgi?id=731684
Google Drive is using this pattern.